# proyecto_informes_gui

./: .gitignore  pyproject.toml
proyecto_informes/core/: informes.py
proyecto_informes/gui/: app.py  main_window.py  table_model.py
