[tool.poetry]
name = "proyecto_informes"
version = "0.1.0"
description = "Proyecto de informes con GUI en PySide6"
authors = ["Federico Wuttke"]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pyside6 = "^6.11.1"
pandas = "^3.0.3"
openpyxl = "^3.1.5"
pyarrow = "^24.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
